tests/expectations/compiler/option/optional_record_fail.out
Error [ETYC0372160]: The type `optional_record_test.aleo::Foo` cannot be wrapped in an optional.
    --> compiler-test:9:9
     |
   9 |         let f: Foo? = Foo { owner: self.signer, val: 5 };
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = Optionals cannot wrap signatures, finals, mappings, tuples, vectors, records, arrays whose elements are optional-unsafe, or structures containing any such types.
